# dc-genai-slackbot

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  test-client.py
